# PyVM

./: .gitignore  Makefile  Readme.md  pyproject.toml
docs/: 001-vm.md
docs/blog/: 01-the-why.md
pyvm/: __init__.py  main.py  vm.py
tests/: test_hlt.py  test_placeholder.py
